--- a/style.css
+++ b/style.css
@@ -1,2 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Maitree:wght@200;300;400;500;600;700&display=swap');
 
+h1 {
+    font-family: "Maitree", serif;
+    font-weight: 200;
+    font-style: normal;
+}
