I put in the description for the image

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ img {
 }
 
 .navbar a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     padding: 15px;
     display: block;
