--- a/style.css
+++ b/style.css
@@ -1,40 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Maitree:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo+Black&family=Italianno&family=Questrial&display=swap');
 
-body {
-    width: 100%;
-    background-color: hsla(14, 32%, 39%, 0.562);
+h1 {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-h2 {
-    font-family: "Maitree", serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-    margin: 9%;
-    color: white;
+
+h1{
+    font-size: 440%;
+    font-family: "Italianno", cursive;
+    color: black;
 }
 
-img {
-    width: 90px;
+
+header {
+    background-color: #CAB3B1;
+    color: #fff;
 }
+
+
 
 .navbar {
-    list-style-type: none;
-    background-color: #CAB3B1;
-    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+
+.logo h1 {
     margin: 0;
 }
 
-.navbar a {
-    color: rgb(0, 0, 0);
+
+.nav-links {
+    list-style: none;
+    display: flex;
+}
+
+
+.nav-links li {
+    margin: 40px;
+}
+
+
+.nav-links a {
+    color: #fff;
     text-decoration: none;
-    padding: 15px;
-    display: block;
-    text-align: center;
-    font-family: "Maitree", serif;
+    font-size: 16px;
+    font-family:"DM Sans", sans-serif;
 }
 
-.navbar a:hover {
-    background-color: #F4E3E3;
-}
 
+.nav-links a:hover {
+    text-decoration: solid;
+    background-color: rgb(170, 215, 255);
+}
