--- a/style.css
+++ b/style.css
@@ -21,11 +21,14 @@ h1{
 header {
     background-color: #CAB3B1;
     color: #fff;
+    margin-bottom: 8%;
 }
 
-
-
 .navbar {
+    padding: 20px;
+}
+
+.navbar ul{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
