I changed the background color of the main webpage and added in the image and header for welcoming customers

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, h1, ul {
 
 
 body {
-    background-color: #845344;
+    background-color: #a0938f;
 }
 
 
@@ -88,4 +88,8 @@ header {
 .nav-links a:hover {
     text-decoration: solid;
     background-color: rgb(185, 147, 147);
+}
+
+h2 {
+    color: azure;
 }
