--- a/style.css
+++ b/style.css
@@ -17,20 +17,13 @@ body {
 
 h1{
     font-size: 440%;
-    letter-spacing: 20%;
 }
-
-
 
 
 header {
     background-color: #CAB3B1;
     color: #000000;
 }
-
-
-
-
 
 
 .navbar {
@@ -41,17 +34,10 @@ header {
 }
 
 
-
-
-
-
 .logo h1 {
     margin: 0;
+    letter-spacing: 200px;
 }
-
-
-
-
 
 
 .nav-links {
@@ -60,17 +46,9 @@ header {
 }
 
 
-
-
-
-
 .nav-links li {
     margin: 40px;
 }
-
-
-
-
 
 
 .nav-links a {
@@ -82,17 +60,24 @@ header {
 }
 
 
-
-
-
-
 .nav-links a:hover {
     text-decoration: solid;
     background-color: rgb(185, 147, 147);
 }
 
+
 h2 {
     color: azure;
     font-family: "Maitree", serif;
     font-weight: 200;
+    letter-spacing: 3px;
+    text-align: center;
+    margin: 2%;
+}
+
+.center {
+    display: block;
+    margin-left: 700px;
+    margin-right: auto;
+    width: 50%;
 }
