--- a/about.css
+++ b/about.css
@@ -17,7 +17,6 @@ body {
 
 h1{
     font-size: 440%;
-    letter-spacing: 20%;
 }
 
 
@@ -37,6 +36,8 @@ header {
 
 .logo h1 {
     margin: 0;
+    letter-spacing: 5px;
+    font-weight: 200;
 }
 
 
