I styled the products page and added in the contents for that page

--- a/products.css
+++ b/products.css
@@ -82,3 +82,60 @@ h2 {
     margin-right: auto;
     width: 50%;
 }
+
+.product-section {
+    text-align: center;
+    margin: 20px;
+}
+
+
+.product {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    margin-bottom: 8px;
+}
+
+
+.product img {
+    max-width: 325px;
+    margin-right: 70px;
+}
+
+
+.product-description {
+    max-width: 425px;
+    text-align: left;
+    font-size: 17px;
+}
+
+
+h2 {
+    font-family: "Maitree", serif;
+    font-weight: 400;
+    font-size: 230%;
+    color: azure;
+    Letter-spacing: 2px;
+}
+
+
+h3 {
+    font-family: "Maitree", serif;
+    font-weight: 300;
+    font-size: 25px;
+    margin-top: 1px;
+    color: azure;
+}
+
+
+
+
+p {
+    font-family: "Maitree", serif;
+    font-weight: 200;
+    color: azure;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+
