I put in the font weight for the header of my contact page for the footer

--- a/style.css
+++ b/style.css
@@ -130,5 +130,6 @@ footer {
 
 .contact h1 {
     color:#FFFFFF;
-    font-family:"Maitree", serif; ;
+    font-family:"Maitree", serif;
+    font-weight: 500;
 }
