--- a/products.css
+++ b/products.css
@@ -131,11 +131,33 @@ h3 {
     text-align: center;
 }
 
-
 p {
     font-family: "Maitree", serif;
     font-weight: 200;
     color: azure;
     margin-bottom: 5px;
     margin-top: 5px;
+}
+
+footer {
+    background-color:#C8A6A6;
+    padding-left: 30px;
+}
+
+.contact {
+    font-family: "Maitree", serif;
+    margin-bottom: 50px;
+}
+
+.contact p {
+    color: #FFFFFF;
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+.contact h1 {
+    color:#FFFFFF;
+    font-family:"Maitree", serif;
+    font-weight: 300;
+    font-size: ;
 }
