--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, h1, ul {
 
 
 body {
-    background-color: #af9e98;
+    background-color: #6F4318;
 }
 
 
@@ -21,7 +21,7 @@ h1{
 
 
 header {
-    background-color: #CAB3B1;
+    background-color: #F5B56D;
     color: #000000;
 }
 
