--- a/products.css
+++ b/products.css
@@ -64,7 +64,7 @@ header {
 
 .nav-links a:hover {
     text-decoration: solid;
-    background-color: rgb(185, 147, 147);
+    background-color: #ffffff ;
 }
 
 
