I changed the font weight and width for the paragraph section of the products page

--- a/products.css
+++ b/products.css
@@ -133,10 +133,11 @@ h3 {
 
 p {
     font-family: "Maitree", serif;
-    font-weight: 200;
+    font-weight: 500;
     color: azure;
     margin-bottom: 5px;
     margin-top: 5px;
+    width: max-content;
 }
 
 footer {
