--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
 
 .nav-links a:hover {
     text-decoration: solid;
-    background-color:#d3b89a ;
+    background-color:#ffffff ;
 }
 
 
@@ -130,6 +130,7 @@ footer {
     color: #FFFFFF;
     margin-top: 10px;
     font-size: 20px;
+    font-weight: 500;
 }
 
 .contact h1 {
