--- a/about.css
+++ b/about.css
@@ -53,7 +53,7 @@ header {
 
 
 .nav-links a {
-    color: #000000;
+    color: #996e2f;
     text-decoration: none;
     font-size: 16px;
     font-family: "Maitree", serif;
