--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ h1{
 
 
 header {
-    background-color: #934A15 ;
-    color: #ffffff;
+    background-color: #d3b89a ;
+    color: #000000;
 }
 
 
@@ -53,7 +53,7 @@ header {
 
 
 .nav-links a {
-    color: #ffffff;
+    color: #000000;
     text-decoration: none;
     font-size: 16px;
     font-family: "Maitree", serif;
@@ -64,7 +64,7 @@ header {
 
 .nav-links a:hover {
     text-decoration: solid;
-    background-color:#996e2f ;
+    background-color:#ffffff ;
 }
 
 
