I added a class for the image so that I could center it into the page

--- a/about.css
+++ b/about.css
@@ -142,3 +142,10 @@ p {
     font-size:10;
     text-align:left;
 }
+
+.center {
+    display: block;
+    margin-left: auto ;
+    margin-right: auto;
+    width: 50%;
+}
