--- a/about.css
+++ b/about.css
@@ -147,5 +147,6 @@ p {
     display: block;
     margin-left: auto ;
     margin-right: auto;
-    width: 50%;
+    width: 50%
+    margin-bottom: 30px;
 }
