--- a/about.css
+++ b/about.css
@@ -53,7 +53,7 @@ header {
 
 
 .nav-links a {
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
     font-size: 16px;
     font-family: "Maitree", serif;
@@ -64,7 +64,7 @@ header {
 
 .nav-links a:hover {
     text-decoration: solid;
-    background-color: #ffffff ;
+    background-color: #d3b89a ;
 }
 
 
@@ -148,5 +148,9 @@ p {
     margin-left: auto ;
     margin-right: auto;
     width: 50%
+}
+
+img {
     margin-bottom: 30px;
+    width: 20px;
 }
