--- a/products.css
+++ b/products.css
@@ -64,7 +64,7 @@ header {
 
 .nav-links a:hover {
     text-decoration: solid;
-    background-color: #d3b89a ;
+    background-color: #6F4318 ;
 }
 
 
